<resources>
    <string name="app_name">Job navigator</string>
    <string name="bottom_nav_item_main">Главная</string>
    <string name="bottom_nav_item_favorites">Избранное</string>
    <string name="bottom_nav_item_team">Команда</string>

    <string name="information_page_title">Команда</string>
    <string name="information_page_list_title">Над приложением работали</string>
    <string name="information_page_list_first">Алексей Кулаев</string>
    <string name="information_page_list_second">Виктория Драенкова</string>
    <string name="information_page_list_third">Владимир Климушин</string>
    <string name="information_page_list_fourth">Максим Захаров</string>


    <string name="search_page_title">Поиск вакансий</string>
    <string name="search_job_list_count">Найдено %1$d вакансий</string>
    <string name="search_job_no_such_vacancies">Таких вакансий нет</string>
    <string name="search_edit_text_hint">Введите запрос</string>
    <string name="search_error_no_connect">Нет интернета</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="search_error_no_data">Не удалось получить список вакансий</string>
    <string name="filter_page_title">Настройки фильтрации</string>
    <string name="search_connection_faild">Нет интернета</string>
<!--    <string name="search_error_server">Не удалось получить список вакансий</string>-->
    <string name="search_error_no_list">Не удалось получить список</string>
    <string name="error_bad_request">Ошибочный запрос</string>

    <string name="favourites">Избранное</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_from">от %1$s</string>
    <string name="salary_to">до %1$s</string>
    <string name="vacancy">Вакансия</string>
    <string name="back">back</string>
    <string name="vacancyNameTemp">Название вакансии</string>
    <string name="like_btn">like_btn</string>
    <string name="share_btn">share_btn</string>
    <string name="salary_from_to">Вилка зп</string>
    <string name="spheare">spheare</string>
    <string name="city">city</string>
    <string name="placeholder_or_icon">placeholder_or_icon</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="is_fulltime_is_remote">Полный ли рабочий день, удалённая ли работа</string>
    <string name="vacancy_discription">Описание вакансии</string>
    <string name="duties">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="conditions">Условия</string>
    <string name="vacancy_description">vacancy description</string>
<!--    <string name="server_error_cats">Ошибка сервера</string>-->
    <string name="vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="choosing_place_of_work">Выбор места работы</string>
    <string name="place_of_work">Место работы</string>
    <string name="country_choosing">Выбор страны</string>
    <string name="region_choosing">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="no_region">Такого региона нет</string>
    <string name="filter_set">Настройки фильтрации</string>
    <string name="Industry">Отрасль</string>
    <string name="enter_salary">Введите сумму</string>
    <string name="show_without_salary">Не показывать без зарплаты</string>
    <string name="search">искать</string>
    <string name="industry_choosing">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="choose">Выбрать</string>
    <string name="no_industry">Такой отрасли нет</string>
    <string name="require_salary">Ожидаемая зарплата</string>
    <string name="apply">Применить</string>
    <string name="cancel">Сбросить</string>
    <string name="empty">""</string>
    <string name="no_earn">Зарплата не указана</string>
</resources>
