<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.searchfilters.PlaceOfWorkFragment">

    <LinearLayout
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_64dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dim_4dp"
            android:layout_marginVertical="@dimen/dim_8dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            style="@style/PageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_20dp"
            android:text="@string/choosing_place_of_work" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/country_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_60dp">

        <TextView
            android:id="@+id/country_textarea"
            style="@style/VacancyItemSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_20dp"
            android:layout_marginLeft="@dimen/dim_16dp"
            android:layout_weight="1"
            android:hint="@string/country"
            android:textColor="@color/day_black_night_white" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_4dp"
            android:layout_marginEnd="@dimen/dim_16dp"
            android:contentDescription="@string/filter_page_title"
            app:srcCompat="@drawable/icon_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/region_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_60dp">

        <TextView
            android:id="@+id/region_textarea"
            style="@style/VacancyItemSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_20dp"
            android:layout_marginLeft="@dimen/dim_16dp"
            android:layout_weight="1"
            android:hint="@string/region"
            android:textColor="@color/day_black_night_white" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_4dp"
            android:layout_marginEnd="@dimen/dim_16dp"
            android:contentDescription="@string/filter_page_title"
            app:srcCompat="@drawable/icon_next" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSelect"
            style="@style/ButtonBlueRounded12"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/dim_24dp"
            android:text="@string/choose"
            android:visibility="visible" />

    </FrameLayout>

</LinearLayout>
