<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.searchfilters.PlaceOfWorkFragment">

    <LinearLayout
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_64dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dim_4dp"
            android:layout_marginVertical="@dimen/dim_8dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            style="@style/PageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_20dp"
            android:text="@string/choosing_place_of_work" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_60dp">

        <TextView
            style="@style/VacancyItemSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_20dp"
            android:layout_marginLeft="@dimen/dim_16dp"
            android:layout_weight="1"
            android:text="@string/country"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_4dp"
            android:layout_marginEnd="@dimen/dim_16dp"
            android:contentDescription="@string/filter_page_title"
            app:srcCompat="@drawable/icon_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_60dp">

        <TextView
            style="@style/VacancyItemSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_20dp"
            android:layout_marginLeft="@dimen/dim_16dp"
            android:layout_weight="1"
            android:text="@string/region"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_4dp"
            android:layout_marginEnd="@dimen/dim_16dp"
            android:contentDescription="@string/filter_page_title"
            app:srcCompat="@drawable/icon_next" />

    </LinearLayout>
</LinearLayout>
