<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.searchfilters.IndustryChooseFragment">

    <LinearLayout
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_64dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dim_4dp"
            android:layout_marginVertical="@dimen/dim_8dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            style="@style/PageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dim_20dp"
            android:text="@string/industry_choosing" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Search"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corners_8dp_grey"
            android:drawablePadding="8dp"
            android:hint="@string/enter_industry"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="45"
            android:maxLines="1"
            android:paddingStart="@dimen/dim_16dp"
            android:singleLine="true"
            android:textColor="@color/black_universal"
            android:textColorHint="@color/day_gray_night_white"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/dim_16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/searchBtn"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            android:padding="8dp"
            android:src="@drawable/ic_search_lens"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/clearText"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="Clear"
            android:padding="8dp"
            android:src="@drawable/ic_close_cross"
            tools:ignore="TouchTargetSizeCheck" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_16dp"
        android:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dim_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dim_16dp" />

        <ImageView
            android:id="@+id/ivInformImage"
            style="@style/InformImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/search_page_title"
            android:src="@drawable/error_no_data"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ivInformBottomText"
            style="@style/InformBottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:text="@string/no_region"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf=""
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/ivInformImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_new_playlist"
        style="@style/ButtonBlueRounded12"
        android:text="@string/choose"
        android:layout_marginBottom="@dimen/dim_24dp"
        android:layout_gravity="bottom"
        />

</LinearLayout>
